# HelloCMake

./: CMakeLists.txt  main.cpp
ExternalClass/Headers/: MyClass.hpp
ExternalClass/Sources/: MyClass.cpp
